<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_160dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@mipmap/default_head"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_38dp"
        android:layout_marginTop="@dimen/dimen_280dp"
        android:maxLength="11"
        android:layout_marginLeft="@dimen/dimen_36dp"
        android:layout_marginRight="@dimen/dimen_36dp"
        android:background="@drawable/selector_login_edit_text"
        android:textColor="@color/color_2c2c2c"
        android:textSize="@dimen/normal"
        android:hint="@string/input_user_name"
        android:textColorHint="@color/color_9b9b9b"
        android:gravity="center" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_38dp"
        android:layout_below="@id/user_name"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_36dp"
        android:layout_marginRight="@dimen/dimen_36dp"
        android:background="@drawable/selector_login_edit_text"
        android:textColor="@color/color_2c2c2c"
        android:textSize="@dimen/normal"
        android:hint="@string/input_password"
        android:textColorHint="@color/color_9b9b9b"
        android:gravity="center"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_38dp"
        android:layout_below="@id/password"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginLeft="@dimen/dimen_36dp"
        android:layout_marginRight="@dimen/dimen_36dp"
        android:background="@drawable/selector_login_button"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="@dimen/large"
        android:gravity="center"
        android:enabled="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/register_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@drawable/selector_forget_password_text"
            android:text="@string/register_new"
            android:textSize="@dimen/normal"
            android:gravity="center" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/line_color"/>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@drawable/selector_forget_password_text"
            android:text="@string/forget_password"
            android:textSize="@dimen/normal"
            android:gravity="center" />
    </LinearLayout>

</RelativeLayout>