<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/tool_bar_full_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_d9d9d9"
        android:orientation="vertical"
        android:layout_below="@id/id_toolbar">
        <RelativeLayout
            android:id="@+id/nick_name_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                style="@style/flag_for_sub_title"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen_28dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginLeft="@dimen/dimen_28dp"
                android:background="@null"
                android:hint="@string/input_phone_number"
                android:textSize="@dimen/small_xx"/>

        </RelativeLayout>
        <View style="@style/thin_separation_line" />
        <RelativeLayout
            android:id="@+id/textInputCustomerNumber_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                style="@style/flag_for_sub_title"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/code_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen_28dp"
                android:maxLines="1"
                android:inputType="number"
                android:ellipsize="end"
                android:layout_marginLeft="@dimen/dimen_28dp"
                android:background="@null"
                android:hint="@string/input_sms_code"
                android:textSize="@dimen/small_xx"/>
            <TextView
                android:id="@+id/get_sms_code"
                android:layout_width="@dimen/dimen_68dp"
                android:textSize="@dimen/small_xx"
                android:textColor="@color/color_ff7000"
                android:background="@drawable/bg_button_sms_code"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen_21dp"
                android:gravity="center"
                android:text="@string/send_sms_code"/>
        </RelativeLayout>
        <View style="@style/thin_separation_line" />
        <RelativeLayout
            android:id="@+id/invite_code_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                style="@style/flag_for_sub_title"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/invite_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen_28dp"
                android:maxLines="1"
                android:inputType="number"
                android:ellipsize="end"
                android:layout_marginLeft="@dimen/dimen_28dp"
                android:background="@null"
                android:hint="@string/input_invite_code"
                android:textSize="@dimen/small_xx" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>