<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical">

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/tool_bar_full_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@+id/id_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/tips"
                android:layout_width="match_parent"
                android:paddingRight="@dimen/dimen_13dp"
                android:layout_height="@dimen/dimen_60dp"
                android:orientation="horizontal">
                <ImageView style="@style/flag_for_sub_title"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_1dp"
                    android:textColor="@color/color_43484b"
                    android:textSize="@dimen/normal"
                    android:text="@string/forget_password_tip"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <View style="@style/thin_separation_line"/>

            <EditText
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_38dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:inputType="number"
                android:maxLength="20"
                android:layout_marginLeft="@dimen/dimen_14dp"
                android:layout_marginRight="@dimen/dimen_14dp"
                android:background="@drawable/selector_login_edittext"
                android:textColor="@color/color_2c2c2c"
                android:textSize="@dimen/normal"
                android:hint="@string/input_phone_number"
                android:textColorHint="@color/color_c5c5c5"
                android:paddingLeft="@dimen/dimen_23dp" />

            <RelativeLayout
                android:id="@+id/modified_psw_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/code_edit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38dp"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:inputType="number"
                    android:maxLength="20"
                    android:layout_marginLeft="@dimen/dimen_14dp"
                    android:layout_marginRight="@dimen/dimen_14dp"
                    android:background="@drawable/selector_login_edittext"
                    android:textColor="@color/color_2c2c2c"
                    android:textSize="@dimen/normal"
                    android:textColorHint="@color/color_c5c5c5"
                    android:paddingLeft="@dimen/dimen_23dp"
                    android:hint="@string/input_sms_code"
                    android:gravity="center_vertical"/>

                <FrameLayout
                    android:id="@+id/get_code"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_30dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="@dimen/dimen_38dp">

                    <Button
                        android:id="@+id/get_code_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@drawable/selector_yellow_btn_text"
                        android:background="@color/no_color"
                        android:textSize="@dimen/small"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/dimen_8dp"
                        android:paddingLeft="@dimen/dimen_8dp"
                        android:paddingRight="@dimen/dimen_8dp"
                        android:paddingBottom="@dimen/dimen_8dp"
                        android:paddingTop="@dimen/dimen_8dp"
                        android:text="获取验证码"/>
                </FrameLayout>

                <EditText
                    android:id="@+id/pws"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38dp"
                    android:layout_below="@id/code_edit"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:layout_marginLeft="@dimen/dimen_14dp"
                    android:layout_marginRight="@dimen/dimen_14dp"
                    android:background="@drawable/selector_login_edittext"
                    android:textColor="@color/color_2c2c2c"
                    android:textSize="@dimen/normal"
                    android:hint="@string/input_new_password"
                    android:textColorHint="@color/color_c5c5c5"
                    android:paddingLeft="@dimen/dimen_23dp"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/re_pws"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38dp"
                    android:layout_below="@id/pws"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:layout_marginLeft="@dimen/dimen_14dp"
                    android:layout_marginRight="@dimen/dimen_14dp"
                    android:background="@drawable/selector_login_edittext"
                    android:textColor="@color/color_2c2c2c"
                    android:textSize="@dimen/normal"
                    android:hint="@string/input_new_password_again"
                    android:textColorHint="@color/color_c5c5c5"
                    android:paddingLeft="@dimen/dimen_23dp"
                    android:inputType="textPassword"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

