<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

    </android.support.v7.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/home_title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp">
        <View
            android:id="@+id/home_title_bar_bg_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/scanning_layout"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/dimen_18dp"
                    android:layout_height="@dimen/dimen_18dp"
                    android:src="@drawable/selector_home_title_bar_scan_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_xx"
                    android:text="@string/scan_to_scan"
                    android:textColor="@color/selector_home_title_bar_font_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/dimen_30dp"
                android:background="@drawable/bg_home_title_bar_search_corner"
                >
                <ImageView
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:src="@mipmap/home_search_ic"
                    />
                <TextView
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/dimen_30dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_l"
                    android:lines="1"
                    android:ellipsize="end"
                    android:text="@string/search_tip"
                    />
                <ImageView
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:src="@mipmap/microphone"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/advisory_layout"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/dimen_18dp"
                    android:layout_height="@dimen/dimen_18dp"
                    android:src="@drawable/selector_home_title_bar_advisory_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_l"
                    android:text="@string/msg"
                    android:textColor="@color/selector_home_title_bar_font_color"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>